<resources>
    <string name="app_name">Facturacion El Carpintero</string>
    <string name="text_buscar">Buscar Cliente</string>
    <string name="unidad_medida2">info5</string>
    <string name="info_dato1">info2</string>
    <string name="unidad_medida">Unidad Medida</string>
    <string name="tinte">Nombre Producto</string>
    <string name="text_cantidad">Cantidad</string>
    <string name="text_precio">Precio</string>
    <string name="precio">Tipo de Precio</string>
    <string name="text_cliente">Cliente Varios</string>
    <string name="addProducto">agregar Producto</string>
    <string name="cliente">Cliente</string>
    <string name="tipo_fact">Tipo Factura</string>
    <string name="zona">Zona</string>
    <string name="L_zona">Managua</string>
    <string name="tipo_venta">tipo venta</string>
    <string name="nombre_vendedor">Nombre Cliente</string>
    <string name="codigo">codigo</string>
    <string name="credito_D">credito</string>
    <string name="login">Iniciar sesion</string>
    <string name="user">Usuarios</string>
    <string name="text_buscar2">Buscar Producto</string>
    <string name="titulo_producto">Titulo Producto</string>
    <string name="pin">ingresar pin</string>
    <string name="factura">Factura</string>

    <string-array name="tipo_moneda">
        <item>Cordoba</item>
        <item>Dolar</item>
    </string-array>
    <string-array name="tipo_ventas">
        <item>Contado</item>
        <item>Credito</item>
    </string-array>

    <string-array name="tipo_estados">
        <item>Facturado</item>
        <item>Pagado</item>
    </string-array>

    <string name="out_of_paper">Papel Fuera de Impresora</string>
    <string name="exists_paper">打印机纸已准备就绪</string>
    <string name="printer_is_working">Recibo impreso</string>
    <string name="printer_high_temp_alarm">当前打印机温度过高，请稍后打印~</string>
    <string name="motor_high_temp_alarm">当前马达温度过高，请稍后打印~</string>
    <string name="printer_current_task_print_complete">打印任务已经打印完成</string>
    <string name="text_precioE">Precio Especial</string>
    <string name="Existencia">Existencia</string>
</resources>