<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFactura"
    android:fillViewport="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/NombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Nombre Facturador"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/codigo"
                android:textAllCaps="true"
                android:textColor="#050505" />

            <TextView
                android:id="@+id/textViewCodigo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/codigo"
                android:textColor="#0C0B0B" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cliente"
                android:textAllCaps="true"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewcliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nombre_vendedor"
                android:textAllCaps="true"
                android:textColor="#121111"
                android:textStyle="bold" />
        </LinearLayout>

        <Spinner
            android:id="@+id/list_vendedores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/numVendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:visibility="gone" />

        <TextView
            android:id="@+id/idVendedorSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="0"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tipo_fact"
                android:textAllCaps="true"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_facura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zona"
                android:textAllCaps="true"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_Zona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/L_zona"
                android:textAllCaps="true"
                android:textColor="#0E0C0C"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/credito_D"
                android:textAllCaps="true"
                android:textColor="#0E0D0D" />

            <TextView
                android:id="@+id/textView_C_Disponible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="40000"
                android:textColor="#0B0909" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/factura"
                android:textAllCaps="true"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_estadoº"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tipo_venta"
                android:textAllCaps="true"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_tventas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="Total de Factura: "
                android:textAllCaps="true"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signo_precio"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="C$"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textV_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </LinearLayout>

        <Button
            android:id="@+id/btn_imprimir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:text="guardar factura"
            android:textColor="@color/white"
            android:padding="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="IdCliente"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textV_idcliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="0"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:visibility="gone" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="IdVendedor"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textV_idvendedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="0"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:visibility="gone" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:id="@+id/cuerpo">


        <ListView
            android:id="@+id/lista_Factura"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:smoothScrollbar="true"
            tools:listitem="@android:layout/simple_list_item_1" />


    </LinearLayout>


</LinearLayout>