<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".MainDetalleProducto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayoutClienteProducto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/tvnombreP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tinte"
            android:textAllCaps="true"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/IDProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="id"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/imagenBD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="imagen"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/unidad_medida"
            android:textColor="#090808"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvUnidadMedida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="12/50"
            android:textColor="#090808"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="pin"
            android:gravity="center"
            android:id="@+id/pin_text"
            android:visibility="gone"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
               android:text="Cantidad Disponible"
               android:textColor="#0E0E0E"
               android:textSize="20sp"
               android:layout_weight="1"/>
           <TextView
               android:id="@+id/text_contar"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
               android:text="0"
               android:textAllCaps="true"
               android:textColor="#0E0E0E"
               android:textSize="20sp"
               android:layout_weight="1"/>
       </LinearLayout>


        <TextView
            android:id="@+id/capturaidInventario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgProducto"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_cantidad"
                android:textAllCaps="true"
                android:textColor="#0B0A0A" />

            <EditText
                android:id="@+id/editTextCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/text_cantidad"
                android:inputType="number"
                android:maxLength="30" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/text_precio"
                android:textAllCaps="true"
                android:textColor="#040303" />

            <Spinner
                android:layout_weight="1"
                android:id="@+id/spinerPrecios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text=" prcio1"
                android:textAllCaps="true"
                android:textColor="#040303"
                android:id="@+id/tipoPrecio"
                android:visibility="gone"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/precio"
                android:textAllCaps="true"
                android:textColor="#0B0A0A" />

            <Spinner
                android:id="@+id/spinner_tipo_moneda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="UM"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_unidadM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unidad_medida2"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:layout_gravity="end"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Informacion"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/text_info1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info_dato1"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/text_info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unidad_medida2"
            android:textAllCaps="true"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/text_info3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unidad_medida2"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/text_info4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/info_dato1"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/text_info5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unidad_medida2"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"/>
    </LinearLayout>
</ScrollView>